varのない記述に修正